@@ -1,0 +1,3 @@
+if mods["SchallCircuitGroup"] then
+  data.raw.item["pc-pollution-combinator"].subgroup = "circuit-input"
+end
