@@ -8,6 +8,7 @@
   "factorio_version": "2.0",
   "dependencies": [
     "base >= 2.0.0",
-    "PollutionCombinator-JamieFork >= 1.1.0"
+    "PollutionCombinator-JamieFork >= 1.1.0",
+    "? SchallCircuitGroup >= 2.0.0"
   ]
 }
